# qilife-v2

./: README.md  app.py  dev_log.md  docker-compose.yml  dockerfile  index.html  package-lock.json  pyproject.toml  pyrightconfig.json  qilife_db.sqlite  requirements.lock.txt  requirements.txt  service_catalog_snippet.html  services_with_images.csv  setup_env.ps1  setup_venv.ps1
.ARCHIVE/: .replit  aa04_analyze.py  aa07_filer.py  ab01_capture.py  ac02_templates.py  add_init_files.py  ja10_consolidate_files.py  log_watcher.py
.ARCHIVE/twilio-coversations-demo-react-main/: package-lock.json
samples/: sample.csv  sample.docx  sample.eml  sample.mhtml  sample.xlsx
src/ai/: chatgpt.py
src/config/: Folder_Structure.xlsx  Folder_Structure_Test.csv  README.md  directory_structure.txt  env.py  folder_rules.json  rules.py  settings.py
src/context/: README.md  metadata_extractor.py
src/core/: README.md  config_loader.py  env_manager.py  log_setup.py  module_router.py
src/fileflow/: .keep  File_renamer.py  README.md  content_extractor.py  context_memory.py  database.py  folder_creator.py  folder_db.py  monitor.py  monitor_control.py  mover.py  rename_client_folders.py  rename_rules.py  routes.py  vector_storage.py
src/gui/: README.md  main_window.py  splash_screen.py
src/lifelog/: README.md  notion_client.py  spyme.py
src/memory/: README.md  embedder.py  vector_store.py
src/monitor/: README.md  (+3 more)
tests/: e01_test_env.py  e02_test_fileflow.sh  e0_config.py  e991_diskfix.py  e992_processor.py  e99_utils.py  test_config_env.bat  test_config_env.py
(+134 files in other folders)
