[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.13",
    "numpy==1.24.3",
    "openai>=1.88.0",
    "openpyxl>=3.1.5",
    "pandas==2.0.3",
    "pdfplumber>=0.11.7",
    "pillow>=11.2.1",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "streamlit>=1.46.0",
    "watchdog>=6.0.0",
]
